<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">SmartLockScreen</string>
    <string name="action_settings">Settings</string>
    <string name="button_unlock">Unlock</string>
    <string name="title_activity_manage_environment">Manage Environments</string>
    <string name="action_add_environment">Add Environment</string>
    <string name="title_activity_add_environment">AddEnvironment</string>
    <string name="edit_text_environment_name">Environment Name</string>
    <string name="checkbox_enable_bluetooth">Enable Bluetooth</string>
    <string name="text_view_bluetooth">Bluetooth</string>
    <string name="text_view_bluetooth_devices_select">Select the bluetooth devices</string>
    <string name="checkbox_enable_wifi">Enable WiFi</string>
    <string name="text_view_wifi">WiFi</string>
    <string name="text_view_wifi_connection_select">Select the WiFi connection</string>
    <string name="dialog_pick_bluetooth_devices">Pick Bluetooth Devices</string>
    <string name="dialog_pick_wifi_connection">Pick WiFi Connection</string>
    <string name="ok">OK</string>
    <string name="checkbox_enable_location">Enable Location</string>
    <string name="text_view_location">Location</string>
    <string name="edit_text_location_lat">Latitude</string>
    <string name="edit_text_location_lon">Longitude</string>
    <string name="edit_text_location_rad">Radius (in meters)</string>
    <string name="action_done_add_environment">Done</string>
    <string name="edit_text_environment_hint">Environment Hint</string>
    <string name="done">Done</string>
    <string name="cancel">Cancel</string>
    <string name="edit_text_location_name">Location Name</string>
    <string name="alert_environment_name_title">Invalid environment name</string>
    <string name="alert_environment_name_message">Please check your environment name.</string>
    <string name="alert_environment_name_unique_title">Invalid Environment Name</string>
    <string name="alert_environment_name_unique_message">Environment name already exists.</string>
    <string name="alert_environment_hint_title">Invalid Environment Hint</string>
    <string name="alert_environment_hint_message">Please check your environment hint.</string>
    <string name="alert_bluetooth_devices_selection_title">No bluetooth devices selected</string>
    <string name="alert_bluetooth_devices_selection_message">Please select at least one bluetooth device.</string>
    <string name="alert_wifi_connection_selection_title">No WiFi connection selected</string>
    <string name="alert_wifi_connection_selection_message">Please select a WiFi connection.</string>
    <string name="alert_cancel_edit_environment_title">Warning</string>
    <string name="alert_cancel_edit_environment_message">Do you really want to exit?</string>
    <string name="alert_name_location_title">Invalid Location name</string>
    <string name="alert_name_location_selection_message">Please Enter a valid Location name.</string>
    <string name="alert_lat_location_title">Invalid Latitude</string>
    <string name="alert_lat_location_selection_message">Please Enter a valid Latitude.</string>
    <string name="alert_lon_location_title">Invalid Longitude</string>
    <string name="alert_lon_location_selection_message">Please Enter a valid Longitude.</string>
    <string name="alert_rad_location_title">Invalid Radius</string>
    <string name="alert_rad_location_selection_message">Please Enter a valid Radius.</string>
    <string name="alert_cancel_add_environment_title">Warning</string>
    <string name="alert_cancel_add_environment_message">Do you want to cancel adding environment?</string>
    <string name="alert_cancel_master_password_message">Do you want to cancel setting Master password?</string>
    <string name="alert_no_variables_title">No Variables Selected</string>
    <string name="alert_no_variables_message">At least select one variable</string>
    <string name="title_activity_select_location">Select Location</string>
    <string name="toast_current_location_not_available">Unable to detect current location</string>
    <string name="button_select_location">Select Location</string>
    <string name="text_view_select_location">Select Location from Map</string>
    <string name="checkbox_bluetooth_all">Check for all bluetooth connection</string>
    <string name="intent_extra_selected_location">selectedLocation</string>
    <string name="title_activity_edit_environment">EditEnvironment</string>
    <string name="text_view__select_stored_location">Select stored location</string>
    <string name="dialog_pick_stored_location">Stored Location</string>
    <string name="text_view_passphrase">Passphrase</string>
    <string name="text_view_enter_pattern">Set pattern</string>
    <string name="text_view_enter_pattern_after_entry">Touch to change pattern</string>
    <string name="alert_no_passphrase_title">Warning</string>
    <string name="alert_no_passphrase_message">No password/pin/pattern set</string>
    <string name="device_admin_name">Smart Lock Screen</string>
    <string name="device_admin_description">Required to change the password, and turn screen on/off automatically.</string>
    <string name="auto_complete_text_view_address_hint">Search for places</string>
    <string name="go">GO!</string>
    <string name="title_activity_search_location">SearchLocation</string>
    <string name="search">Search</string>
    <string name="hint_searchbar">Search for location</string>
    <string name="alert_no_passphrase_match_title">Warning</string>
    <string name="alert_no_passphrase_match_message">Passwords do not match.</string>
    <string name="dialog_pick_location_connection">Pick a Location</string>
    <string name="title_activity_dismiss_keyguard">DismissKeyguardActivity</string>
    <string name="task_lockscreen">com.pvsagar.smartlockscreen.lockscreen_overlay.task</string>
    <string name="title_activity_store_pattern">Store Pattern</string>
    <string name="pattern_continue">Continue</string>
    <string name="pattern_confirm">Confirm</string>
    <string name="reset">Reset</string>
    <string name="use_master_password">Use master passphrase</string>
    <string name="title_activity_environment_overlap">Environment Overlap</string>
    <string name="title_activity_set_master_password">Set Master Password</string>
    <string name="master_password_set">Master password set</string>
    <string name="title_activity_smart_lock_screen_settings">SmartLockScreen Settings</string>
    <string name="user_picture_content_description">User Picture</string>
    <string name="drop_down_pic_content_description">Choose Profile</string>
    <string name="add_new_profile_text">Add new profile</string>
    <string name="user_type_device_owner">Device Owner</string>
    <string name="user_type_restricted_profile">Restricted Profile</string>
    <string name="title_add_new_profile">New profile</string>
    <string name="hint_enter_new_profile_name">Enter profile name</string>
    <string name="title_activity_allowed_apps">Allowed Apps</string>
    <string name="title_activity_set_passphrase">Set Passphrase</string>
    <string name="title_activity_help">Help</string>
    <string name="title_activity_about">About</string>
    <string name="drawer_open">Drawer Open</string>
    <string name="drawer_close">Drawer Close</string>
    <string name="no_overlap_detected">No overlap detected so far</string>
    <string name="title_activity_set_unknown_environment_password">Password for unknown environment</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_choose_picture">Choose Picture</string>
    <string name="app_locked_message">App locked. Enter master password to unlock</string>
    <string name="hint_enter_master_password">Enter master password</string>
    <string name="exit">Exit</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="use_master_password_to_unlock">Use master passphrase to unlock</string>
    <string name="unknown_environment">Unknown environment</string>
    <string name="toast_wallpaper_set">Wallpaper set</string>
    <string name="defined_environments">Defined environments</string>
    <string name="no_environments_added">No environments added.</string>
    <string name="join_discussion">Join the discussion at XDA</string>
    <string name="check_update">Check for updates</string>
    <string name="authors">©Aravind Sagar and V Priyan</string>
    <string name="checking_update">Checking for updates</string>
    <string name="update_check_failed">Couldn\'t check for updates.</string>
    <string name="no_update_available">No update available</string>
    <string name="update_available">"Update available, version "</string>
    <string name="download">Download</string>
    <string name="view_change_log">View change log</string>
    <string name="update_available_dialog">"A new version of SmartLockScreen is available, version "</string>
    <string name="alert_title_error">Error</string>
    <string name="alert_incompat_pattern">Please enable \'Show notifications in Lockscreen\' option in General Settings to use pattern lock.
        Alternatively, if you have root access, change pattern type to \'System Pattern\' in General Settings</string>

</resources>
